--- a/WebParts/ZNet_PeopleCarousel/src/webparts/groupPeople/components/GroupPeople.module.scss
+++ b/WebParts/ZNet_PeopleCarousel/src/webparts/groupPeople/components/GroupPeople.module.scss
@@ -37,7 +37,7 @@
    * Used to hide title
    */
   .hidden {
-    display: none;
+    display: none!important;
   }
   
   .personaTile {
@@ -46,7 +46,7 @@
     @include ms-md4;
     @include ms-sm12;
     // margin: 10px 0;
-    box-shadow: rgba(0, 0, 0, 0.133) 0px 1.6px 3.6px 0px, rgba(0, 0, 0, 0.11) 0px 0.3px 0.9px 0px;
+    box-shadow: rgba(160, 88, 88, 0.133) 0px 1.6px 3.6px 0px, rgba(0, 0, 0, 0.11) 0px 0.3px 0.9px 0px;
     transition: box-shadow 0.5s ease 0s;
     margin-right: 10px;
     margin-top: 10px;
@@ -92,4 +92,5 @@
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+
 }
